Use Set.of() instead of Collections.emptySet()